# API_store

./: README.md
store_app/: docker.compose.yml  makefile  pyproject.toml
store_app/store/: main.py
store_app/store/controllers/: product.py
store_app/store/models/: base.py
store_app/store/schemas/: base.py  product.py
store_app/store/usecases/: product.py
store_app/tests/: conftest.py
store_app/tests/usecases/: test_product.py
